# discord-shortcut-creator

./: Cargo.toml  app.rc  app.res  build.rs
src/: main.rs
