[package]
name = "discord_shortcut_creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = [
  "winerror",
  "combaseapi",
  "objbase",
  "shobjidl",
  "winuser",
  "shellapi",
  "objidl",
] }
dirs = "*"
semver = "*"

[build-dependencies]
embed-resource = "*"
